src/test/ui/object-lifetime/object-lifetime-default-from-rptr-struct-error.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/object-lifetime-default-from-rptr-struct-error.rs:31:5
   |
LL | fn c<'a>(t: &'a MyBox<Test+'a>, mut ss: SomeStruct<'a>) {
   |      -- lifetime `'a` defined here
LL |     ss.t = t; //~ ERROR mismatched types
   |     ^^^^^^^^ assignment requires that `'a` must outlive `'static`

error: aborting due to previous error

